# ercot-outage-agent

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: explore.ipynb
scripts/: chat.py  ingest.py  setup_ollama.sh
src/inference/: __init__.py  client.py
src/ingestion/: __init__.py  ercot.py
src/rag/: __init__.py  agent.py  store.py
