[project]
name = "ercot-grid-agent"
version = "0.1.0"
description = "RAG pipeline over live ERCOT operational data powered by open-source LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    # Data ingestion
    "lxml>=5.0.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    # Embeddings + vector store
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # LLM orchestration
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    # UI
    "gradio>=4.0.0",
    # Dev
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "rich>=13.0.0",
    "gridstatus>=0.36.0",
]

[project.scripts]
ingest = "scripts.ingest:main"
chat = "scripts.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
